Fix alignment

--- a/css/extraction.css
+++ b/css/extraction.css
@@ -16,9 +16,27 @@
   top: 0;
   left: 0;
 }
-
+ #brewPlan {
+   background-color: #C0FFC0;
+ }
 .parameter {
-  width: 40%;
+  width: 45%;
+  display: flex;
+  /* border-style: solid; */
+  margin-bottom: 10px;
+  font-size: 0.5em;
+}
+
+.parameter span {
+  display: inline-block;
+  width: 50%;
+  text-align: right;
+  padding-right: 2px;
+}
+.parameter input {
+  display: inline-block;
+  width: 50%;
+
 }
 
 #brewPlan .flexContainer {
